--- a/src/app/main/content/matches/matches.component.html
+++ b/src/app/main/content/matches/matches.component.html
@@ -5,6 +5,7 @@
     type="submit"
     [disabled]="!(canGenerate | async)"
     (click)="generateGameDays()"
+    color="accent"
   >
     Generar
   </button>
