--- a/src/app/main/content/matches/matches.component.html
+++ b/src/app/main/content/matches/matches.component.html
@@ -1,7 +1,6 @@
 <div>
-  <h2 i18n>Partidos</h2>
+  <h2>Partidos</h2>
   <button
-    i18n
     mat-raised-button
     type="submit"
     [disabled]="(canGenerate | async) === false"
@@ -13,13 +12,13 @@
 </div>
 <ng-container *ngFor="let gameDay of gameDays | async">
   <h3>
-    <strong i18n> Fecha {{ gameDay.dateNumber }}</strong> -
+    <strong> Fecha {{ gameDay.dateNumber }}</strong> -
     {{ gameDay.date.toDateString() }}
   </h3>
   <div>
     <ng-container *ngFor="let match of gameDay.matches; index as i">
       <app-team-button [team]="match.home"></app-team-button>
-      <span i18n class="mat-mini-fab mat-accent">VS</span>
+      <span class="mat-mini-fab mat-accent">VS</span>
       <app-team-button [team]="match.away"></app-team-button>
     </ng-container>
   </div>
