--- a/src/app/main/content/teams/team-add/team-add.component.html
+++ b/src/app/main/content/teams/team-add/team-add.component.html
@@ -1,15 +1,9 @@
 <form [formGroup]="form" (ngSubmit)="save()">
   <mat-form-field>
-    <mat-label i18n>Equipo</mat-label>
-    <input
-      i18n-placeholder
-      formControlName="team"
-      matInput
-      placeholder="Ej. Peñarol"
-    />
+    <mat-label>Equipo</mat-label>
+    <input formControlName="team" matInput placeholder="Ej. Peñarol" />
   </mat-form-field>
   <button
-    i18n
     mat-raised-button
     type="submit"
     [disabled]="(canAdd | async) === false || form.invalid"
