--- a/src/app/main/content/teams/teams.component.html
+++ b/src/app/main/content/teams/teams.component.html
@@ -1,12 +1,12 @@
 <div>
-  <h2 i18n>Teams</h2>
+  <h2>Teams</h2>
   <button
     mat-mini-fab
     color="accent"
     (click)="deleteSelected()"
     [disabled]="(selected | async) === null"
   >
-    <mat-icon i18n>delete</mat-icon>
+    <mat-icon>delete</mat-icon>
   </button>
 </div>
 <app-team-button
